[gd_scene load_steps=6 format=3 uid="uid://dn5623qqf2hi"]

[ext_resource type="Script" path="res://enemies/enemy.gd" id="1_l0mwk"]
[ext_resource type="Script" path="res://components/move_component.gd" id="2_smiq1"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="3_2lr84"]
[ext_resource type="Script" path="res://components/hurt_component.gd" id="4_sohwq"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="5_ga7oj"]

[node name="Enemy" type="PathFollow2D"]
script = ExtResource("1_l0mwk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_smiq1")
actor = NodePath("..")
speed = 4.0

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("5_ga7oj")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_mask = 0
script = ExtResource("3_2lr84")

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("4_sohwq")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")
